--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "copy": "^0.3.0",
+    "dom-compose": "^1.1.1",
     "more-events": "^1.3.2",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
